[build-system]
requires = ["setuptools >= 61.0", "setuptools_scm >= 8.0"]
build-backend = "setuptools.build_meta"
include-package-date = true

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
"osdag.data.ResourceFiles.images" = ["*.png", "*.PNG", "*.jpg", "*.jpeg"]
"osdag.data.ResourceFiles.Database" = ["*"]
"osdag.data.themes" = ["*"]

[project]
name = "osdag"
dynamic = ["version"]
dependencies = ["PyQt5", "requests", "pylatex", "numpy", "PyYaml", "PyGithub"]
requires-python = ">= 3.8"
description = "Open steel design and graphics"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["steel design", "civil engineering", "engineering"]

[project.gui-scripts]
osdag = "osdag.osdagMainPage:do_stuff"
