[build-system]
requires = [
    "setuptools >= 61.0",
    "setuptools_scm >= 8.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "osdag"
version = "0.1"
description = "Open steel design and graphics"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["steel design", "civil engineering", "engineering"]
dependencies = [
    "PyQt5",
    "requests",
    "pylatex",
    "numpy",
    "PyYAML",
    "PyGithub"
]

[project.gui-scripts]
osdag = "osdag.osdagMainPage:do_stuff"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"osdag.data.ResourceFiles.images" = ["*.png", "*.PNG", "*.jpg", "*.jpeg"]
"osdag.data.ResourceFiles.Database" = ["*"]
"osdag.data.themes" = ["*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
