[build-system]
requires = [
    "setuptools >= 61.0",
    "setuptools_scm >= 8.0",
    "pytest"  # Ensure pytest is available during the build process
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
"osdag.data.ResourceFiles.images" = ["*.png", "*.PNG", "*.jpg", "*.jpeg"]
"osdag.data.ResourceFiles.Database" = ["*"]
"osdag.data.themes" = ["*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[project]
name = "osdag"
dynamic = ["version"]
dependencies = [
    "PyQt5", "requests", "pylatex", "numpy", "PyYaml", "PyGithub", "pytest"  # Added pytest as a runtime dependency
]
requires-python = ">=3.8"
description = "Open steel design and graphics"
readme = "README.md"
license = {text = "MIT"}
keywords = ["steel design", "civil engineering", "engineering"]

[project.gui-scripts]
osdag = "osdag.osdagMainPage:do_stuff"
